force-app/main/default/objects/EYI_Booking__c/fields/EYI_Customer_Account_Assignment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Customer_Account_Assignment__c</fullName>
    <defaultValue>&apos;Standard&apos;</defaultValue>
    <label>Customer Account Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>