force-app/main/default/objects/EYI_Booking__c/fields/EYI_Deed_of_Cancellation_Reg_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Deed_of_Cancellation_Reg_Date__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Deed of Cancellation Reg Date</label>
    <type>Date</type>
</CustomField>