force-app/main/default/objects/EYI_Booking__c/fields/EYI_Details_of_Corporate__c.field-meta.xml
<CustomField>
    <fullName>EYI_Details_of_Corporate__c</fullName>
    <label>Details of Corporate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>