force-app/main/default/objects/EYI_Booking__c/fields/EYI_Distribution_Channels__c.field-meta.xml
<CustomField>
    <fullName>EYI_Distribution_Channels__c</fullName>
    <label>Distribution Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>Channel Partner Sale</fullName>
            </value>
            <value>
                <fullName>MHADA Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>