force-app/main/default/objects/EYI_Booking__c/fields/EYI_Divisions__c.field-meta.xml
<CustomField>
    <fullName>EYI_Divisions__c</fullName>
    <label>Divisions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>