force-app/main/default/objects/EYI_Booking__c/fields/EYI_EOI_amount_received__c.field-meta.xml
<CustomField>
    <fullName>EYI_EOI_amount_received__c</fullName>
    <label>EOI amount received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>