force-app/main/default/objects/EYI_Booking__c/fields/EYI_EOI_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_EOI_Date__c</fullName>
    <label>EOI Date</label>
    <type>Date</type>
</CustomField>