force-app/main/default/objects/EYI_Booking__c/fields/EYI_File_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_File_Number__c</fullName>
    <label>File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>