force-app/main/default/objects/EYI_Booking__c/fields/EYI_Final_agreement_value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Final_agreement_value__c</fullName>
    <label>Final agreement value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>