force-app/main/default/objects/EYI_Booking__c/fields/EYI_Final_Agreement_value_received_Per__c.field-meta.xml
<CustomField>
    <fullName>EYI_Final_Agreement_value_received_Per__c</fullName>
    <formula>EYI_Total_Advance_Booking_Amt_received__c  /  EYI_Final_agreement_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Agreement value received(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>