force-app/main/default/objects/EYI_Booking__c/fields/EYI_Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Floor_Number__c</fullName>
    <label>Floor Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>