force-app/main/default/objects/EYI_Booking__c/fields/EYI_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_GST_Number__c</fullName>
    <label>GST Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>