force-app/main/default/objects/EYI_Booking__c/fields/EYI_Instrument_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Instrument_Amount__c</fullName>
    <label>Instrument Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>