force-app/main/default/objects/EYI_Booking__c/fields/EYI_Instrument_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Instrument_Date__c</fullName>
    <label>Instrument Date</label>
    <type>Date</type>
</CustomField>