force-app/main/default/objects/EYI_Booking__c/fields/EYI_Instrument_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Instrument_Number__c</fullName>
    <label>Instrument Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>