force-app/main/default/objects/EYI_Booking__c/fields/EYI_Is_Syc__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Syc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if the record has been synced with SAP</description>
    <label>Is sync?</label>
    <type>Checkbox</type>
</CustomField>