force-app/main/default/objects/EYI_Booking__c/fields/EYI_IsAutomationBypassed__c.field-meta.xml
<CustomField>
    <fullName>EYI_IsAutomationBypassed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAutomationBypassed</label>
    <type>Checkbox</type>
</CustomField>