force-app/main/default/objects/EYI_Booking__c/fields/EYI_Joint_Applicant_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Joint_Applicant_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Applicant 1</label>
    <type>Checkbox</type>
</CustomField>