force-app/main/default/objects/EYI_Booking__c/fields/EYI_Last_Reminder_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>EYI_Last_Reminder_letter_sent__c</fullName>
    <label>Last Reminder letter sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reminder 1</fullName>
            </value>
            <value>
                <fullName>Reminder 2</fullName>
            </value>
            <value>
                <fullName>Reminder 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>