force-app/main/default/objects/EYI_Booking__c/fields/EYI_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Loan_Amount__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Loan Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>