force-app/main/default/objects/EYI_Booking__c/fields/EYI_Loan_File_number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Loan_File_number__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Loan File number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>