force-app/main/default/objects/EYI_Booking__c/fields/EYI_Loaning_Institute__c.field-meta.xml
<CustomField>
    <fullName>EYI_Loaning_Institute__c</fullName>
    <description>Loaning Institute</description>
    <label>Loaning Institute</label>
    <length>20</length>
    <type>Text</type>
</CustomField>