force-app/main/default/objects/EYI_Booking__c/fields/EYI_Maintenance_wef_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Maintenance_wef_Date__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Maintenance wef Date</label>
    <type>Date</type>
</CustomField>