force-app/main/default/objects/EYI_Booking__c/fields/EYI_Marketing_Campaign_name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Marketing_Campaign_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bookings (Marketing Campaign name)</relationshipLabel>
    <relationshipName>Bookings3</relationshipName>
    <type>Lookup</type>
</CustomField>