force-app/main/default/objects/EYI_Booking__c/fields/EYI_Mortgage_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mortgage_Status__c</fullName>
    <description>Mortgage Status</description>
    <label>Mortgage Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>