force-app/main/default/objects/EYI_Booking__c/fields/EYI_Name_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Name_1__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Name 1</label>
    <length>35</length>
    <type>Text</type>
</CustomField>