force-app/main/default/objects/EYI_Booking__c/fields/EYI_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Next_Action_Date__c</fullName>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>