force-app/main/default/objects/EYI_Booking__c/fields/EYI_NOC_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_NOC_Issue_Date__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>NOC Issue Date</label>
    <type>Date</type>
</CustomField>