force-app/main/default/objects/EYI_Booking__c/fields/EYI_Opp_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opp_Customer_Number__c</fullName>
    <formula>EYI_Opportunity_Name__r.EYI_SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EYI Opp Customer Number</label>
    <type>Text</type>
</CustomField>