force-app/main/default/objects/EYI_Booking__c/fields/EYI_Parking_count__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_count__c</fullName>
    <label>Parking count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>