force-app/main/default/objects/EYI_Booking__c/fields/EYI_Payment_plan__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_plan__c</fullName>
    <label>Payment plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>Subvention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>