force-app/main/default/objects/EYI_Booking__c/fields/EYI_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Refund Failed</fullName>
            </value>
            <value>
                <fullName>Refund Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>