force-app/main/default/objects/EYI_Booking__c/fields/EYI_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_Terms__c</fullName>
    <defaultValue>&apos;15 days from invoice&apos;</defaultValue>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 days from invoice</fullName>
                <default>true</default>
                <label>15 days from invoice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>