force-app/main/default/objects/EYI_Booking__c/fields/EYI_Payment_transaction_detail__c.field-meta.xml
<CustomField>
    <fullName>EYI_Payment_transaction_detail__c</fullName>
    <label>Payment transaction detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>