force-app/main/default/objects/EYI_Booking__c/fields/EYI_Possession_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Possession_Date__c</fullName>
    <label>Possession Date</label>
    <type>Date</type>
</CustomField>