force-app/main/default/objects/EYI_Booking__c/fields/EYI_Possession_Intimation_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Possession_Intimation_Date__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Possession Intimation Date</label>
    <type>Date</type>
</CustomField>