force-app/main/default/objects/EYI_Booking__c/fields/EYI_Primary_Mob_No_with_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Primary_Mob_No_with_Country_Code__c</fullName>
    <formula>&quot;+91&quot; &amp;  EYI_CP_Correspondence_Mobile_Number__c</formula>
    <label>Primary Mob No with Country Code</label>
    <type>Text</type>
</CustomField>