force-app/main/default/objects/EYI_Booking__c/fields/EYI_Purpose_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>EYI_Purpose_of_Purchase__c</fullName>
    <label>Purpose of Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
                <isActive>false</isActive>
                <label>Gift</label>
            </value>
            <value>
                <fullName>Investment</fullName>
                <isActive>false</isActive>
                <label>Investment</label>
            </value>
            <value>
                <fullName>Second Home</fullName>
                <isActive>false</isActive>
                <label>Second Home</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>