force-app/main/default/objects/EYI_Booking__c/fields/EYI_REC_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is lookup field for REC account object.</description>
    <label>REC Account</label>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>