force-app/main/default/objects/EYI_Booking__c/fields/EYI_REC_Mapping__c.field-meta.xml
<CustomField>
    <fullName>EYI_REC_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is lookup field for Project REC Mapping Object.</description>
    <label>REC Mapping</label>
    <referenceTo>EYI_Project_REC_Mapping__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>