force-app/main/default/objects/EYI_Booking__c/fields/EYI_Reconciliation_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reconciliation_Account__c</fullName>
    <defaultValue>&apos;Domestic Customer&apos;</defaultValue>
    <label>Reconciliation Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Customer</fullName>
                <default>true</default>
                <label>Domestic Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>