force-app/main/default/objects/EYI_Booking__c/fields/EYI_Referral_contact_details__c.field-meta.xml
<CustomField>
    <fullName>EYI_Referral_contact_details__c</fullName>
    <label>Referral contact details</label>
    <type>Phone</type>
</CustomField>