force-app/main/default/objects/EYI_Booking__c/fields/EYI_Refund_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Refund_Tax_Amount__c</fullName>
    <formula>(EYI_Total_Refund_Amount__c  *  EYI_Total_Advance_Booking_Tax_Amount__c )/ EYI_Total_Advance_Booking_Amt_received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>