force-app/main/default/objects/EYI_Booking__c/fields/EYI_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Registration_Date__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>