force-app/main/default/objects/EYI_Booking__c/fields/EYI_Registration_Office__c.field-meta.xml
<CustomField>
    <fullName>EYI_Registration_Office__c</fullName>
    <label>Registration Office</label>
    <length>100</length>
    <type>Text</type>
</CustomField>