force-app/main/default/objects/EYI_Booking__c/fields/EYI_RERA_Carpet_Area_Sq_mtr__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Carpet_Area_Sq_mtr__c</fullName>
    <label>RERA Carpet Area (Sq. mtr.)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>