force-app/main/default/objects/EYI_Booking__c/fields/EYI_Sales_Deed_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Deed_No__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Sales Deed No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>