force-app/main/default/objects/EYI_Booking__c/fields/EYI_Sales_manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>