force-app/main/default/objects/EYI_Booking__c/fields/EYI_Sales_Managers__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Managers__c</fullName>
    <label>Sales Managers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anjali Sangale</fullName>
            </value>
            <value>
                <fullName>Debrah Marian</fullName>
            </value>
            <value>
                <fullName>Dhanraj Anklikar</fullName>
            </value>
            <value>
                <fullName>Dipika Badhe</fullName>
            </value>
            <value>
                <fullName>Gulshan Soni</fullName>
            </value>
            <value>
                <fullName>Hardik Parekh</fullName>
            </value>
            <value>
                <fullName>Karan Sogthi</fullName>
            </value>
            <value>
                <fullName>Kosha Bhansali</fullName>
            </value>
            <value>
                <fullName>Kruti Bhandare</fullName>
            </value>
            <value>
                <fullName>Manish Roy</fullName>
            </value>
            <value>
                <fullName>Manoj Chellani</fullName>
            </value>
            <value>
                <fullName>Mohit Ramsinghani</fullName>
            </value>
            <value>
                <fullName>Mukul Mehta</fullName>
            </value>
            <value>
                <fullName>Nagesh</fullName>
            </value>
            <value>
                <fullName>Naresh Haseja</fullName>
            </value>
            <value>
                <fullName>Niket Mule</fullName>
            </value>
            <value>
                <fullName>Nishant Katiyal</fullName>
            </value>
            <value>
                <fullName>Piyush Chawla</fullName>
            </value>
            <value>
                <fullName>Prajot Dighe</fullName>
            </value>
            <value>
                <fullName>Pranay Kamath</fullName>
            </value>
            <value>
                <fullName>Priyanki Barasia</fullName>
            </value>
            <value>
                <fullName>Rahul Verma</fullName>
            </value>
            <value>
                <fullName>Seema Kale</fullName>
            </value>
            <value>
                <fullName>Siddharth Rajak</fullName>
            </value>
            <value>
                <fullName>Snehal Kolambe</fullName>
            </value>
            <value>
                <fullName>Sujeet Yadav</fullName>
            </value>
            <value>
                <fullName>Tejvir Sohal</fullName>
            </value>
            <value>
                <fullName>Vaibhav Gaur</fullName>
            </value>
            <value>
                <fullName>Vickhil Thakkar</fullName>
            </value>
            <value>
                <fullName>Vipin Agrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>