force-app/main/default/objects/EYI_Booking__c/fields/EYI_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Office__c</fullName>
    <label>Regional Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EYI World Tower</fullName>
            </value>
            <value>
                <fullName>EYI High Street</fullName>
            </value>
            <value>
                <fullName>EYI World Towers-Mundhawa</fullName>
            </value>
            <value>
                <fullName>EYI Kaleido</fullName>
            </value>
            <value>
                <fullName>Kohonoor Westview Reserve</fullName>
            </value>
            <value>
                <fullName>EYI Jeeva</fullName>
            </value>
            <value>
                <fullName>EYI Sapphire</fullName>
            </value>
            <value>
                <fullName>EYI Grandeur</fullName>
            </value>
            <value>
                <fullName>EYI Emreald</fullName>
            </value>
            <value>
                <fullName>EYI B-zone - ShivajiNagar</fullName>
            </value>
            <value>
                <fullName>B-ZONE -- BANER</fullName>
            </value>
            <value>
                <fullName>EYI Sapphire 3</fullName>
            </value>
            <value>
                <fullName>EYI Viva Pixel Phase - I</fullName>
            </value>
            <value>
                <fullName>KOHINOOR BUSINESS TOWER</fullName>
            </value>
            <value>
                <fullName>EYI Sapphire 2</fullName>
            </value>
            <value>
                <fullName>EYI Viva City</fullName>
            </value>
            <value>
                <fullName>EYI Courtyard One</fullName>
            </value>
            <value>
                <fullName>EYI Famville</fullName>
            </value>
            <value>
                <fullName>EYI Sportsville</fullName>
            </value>
            <value>
                <fullName>EYI Coral</fullName>
            </value>
            <value>
                <fullName>EYI Presidentia</fullName>
            </value>
            <value>
                <fullName>EYI Abhiman Homes</fullName>
            </value>
            <value>
                <fullName>EYI Shangrila</fullName>
            </value>
            <value>
                <fullName>KOHINOOR WEST VIEW AVENUE</fullName>
            </value>
            <value>
                <fullName>EYI Westview Reserve</fullName>
            </value>
            <value>
                <fullName>KOHINOOR VIVA PIXEL-PHASE II</fullName>
            </value>
            <value>
                <fullName>Kohinoor Abhiman Homes</fullName>
                <isActive>false</isActive>
                <label>Kohinoor Abhiman Homes</label>
            </value>
            <value>
                <fullName>Kohinoor B-zone - ShivajiNagar</fullName>
                <isActive>false</isActive>
                <label>Kohinoor B-zone - ShivajiNagar</label>
            </value>
            <value>
                <fullName>Kohinoor Coral</fullName>
                <isActive>false</isActive>
                <label>Kohinoor Coral</label>
            </value>
            <value>
                <fullName>Kohinoor Courtyard One</fullName>
                <isActive>false</isActive>
                <label>Kohinoor Courtyard One</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>