force-app/main/default/objects/EYI_Booking__c/fields/EYI_Sales_Organisations__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Organisations__c</fullName>
    <label>Sales Organisations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Godiva Properties Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Intofinity Promotors Pvt Ltd</fullName>
            </value>
            <value>
                <fullName>Goldway Reality</fullName>
            </value>
            <value>
                <fullName>Rising Associates</fullName>
            </value>
            <value>
                <fullName>Realcon Landmark LLP</fullName>
            </value>
            <value>
                <fullName>Courtyard One Ventures LLP</fullName>
            </value>
            <value>
                <fullName>Yellowstone Skyscrappers LLP</fullName>
            </value>
            <value>
                <fullName>Rising Propcons LLP</fullName>
            </value>
            <value>
                <fullName>EYI Properties</fullName>
            </value>
            <value>
                <fullName>Moonstone Real Infra Pvt. Ltd.</fullName>
            </value>
            <value>
                <fullName>EYI Development Corporation</fullName>
            </value>
            <value>
                <fullName>The Dwellwell Premises LLP</fullName>
            </value>
            <value>
                <fullName>The Dwellwell Reality LLP</fullName>
            </value>
            <value>
                <fullName>Thanish Construction LLP</fullName>
            </value>
            <value>
                <fullName>Kohinoor Development Corporation</fullName>
                <isActive>false</isActive>
                <label>Kohinoor Development Corporation</label>
            </value>
            <value>
                <fullName>Kohinoor Properties</fullName>
                <isActive>false</isActive>
                <label>Kohinoor Properties</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>