force-app/main/default/objects/EYI_Booking__c/fields/EYI_Sanction_date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sanction_date__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Sanction date</label>
    <type>Date</type>
</CustomField>