force-app/main/default/objects/EYI_Booking__c/fields/EYI_SAP_Advance_Booking_Response__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Advance_Booking_Response__c</fullName>
    <label>SAP Advance Booking Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>