force-app/main/default/objects/EYI_Booking__c/fields/EYI_SAP_Cancellation_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Cancellation_Document_Number__c</fullName>
    <label>SAP Cancellation Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>