force-app/main/default/objects/EYI_Booking__c/fields/EYI_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>SAP Customer Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>