force-app/main/default/objects/EYI_Booking__c/fields/EYI_SAP_Error__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Error__c</fullName>
    <description>Field to store error messages coming from SAP</description>
    <label>SAP Error</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>