force-app/main/default/objects/EYI_Booking__c/fields/EYI_SAP_request__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_request__c</fullName>
    <description>Stamping sap request</description>
    <label>SAP request</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>