force-app/main/default/objects/EYI_Booking__c/fields/EYI_SAP_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Sales_Order_Number__c</fullName>
    <label>SAP Sales Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>