force-app/main/default/objects/EYI_Booking__c/fields/EYI_SD_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_SD_Received_Date__c</fullName>
    <label>SD Received Date</label>
    <type>Date</type>
</CustomField>