force-app/main/default/objects/EYI_Booking__c/fields/EYI_SD_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_SD_Status__c</fullName>
    <label>SD Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SD Pending</fullName>
                <default>true</default>
                <label>SD Pending</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>SD received</fullName>
            </value>
            <value>
                <fullName>SD Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>